Added Stylesheet and bootstrap, implemented both in index.html.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>devCodeCamp &middot; Most Wanted</title>
+		<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+  	<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <button onclick="app(data)">Start Searching</button>
