Added styling to index.html using style.css.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <title>devCodeCamp &middot; Most Wanted</title>
 		<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
   	<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Cousine&display=swap" rel="stylesheet">
   </head>
   <body>
-    <button onclick="app(data)">Start Searching</button>
+		<div class="header-main">
+			<h1>Most Wanted Persons Search Engine</h1>
+		</div>
+		<div class="button-holder">
+    	<button class="btn btn-info" onclick="app(data)">Start Searching</button>
+		</div>
     <script src="data.js"></script>
     <script src="app.js"></script>
   </body>
